--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Chrome Extension TypeScript Starter",
-  "description": "Chrome Extension, TypeScript, Visual Studio Code",
+  "name": "Google Calendar to Csv",
+  "description": "Chrome Extension to export data from google calendar screen to csv files.",
   "version": "1.0",
 
   "options_ui": {
@@ -10,24 +10,27 @@
     "chrome_style": true
   },
 
+  "icons": {
+    "16": "./icon-16x16.png",
+    "32": "./icon-32x32.png",
+    "48": "./icon-48x48.png",
+    "128": "./icon-128x128.png"
+  },
+
   "browser_action": {
-    "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
 
   "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
+    {
+      "matches": ["https://calendar.google.com/*"],
+      "js": ["js/vendor.js", "js/content_script.js"]
+    }
   ],
 
   "background": {
     "scripts": ["js/vendor.js", "js/background.js"]
   },
 
-  "permissions": [
-    "storage",
-    "<all_urls>"
-  ]
+  "permissions": ["storage", "https://calendar.google.com/*"]
 }
